Añade 'Footer,Offer,SocialNetworks', cambios en img, search, card,title'

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,6 @@
-.card_produts{
-    width: 250px !important;
-    height: 500px !important;
+.card-img-top{
+    width: 80% !important;
+}
+.card-body{
+    width: 80% !important;
 }
