--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -17,7 +17,7 @@
     height    : 2px;
     left      : 15px;
     top       : 50%;
-    background: chocolate;
+    background: #ff42c6;
     z-index   : 50;
 }
 
@@ -28,7 +28,7 @@
     height    : 2px;
     right     : 15px;
     top       : 50%;
-    background: chocolate;
+    background: #ff42c6;
     z-index   : 50;
 }
 
