--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* RUTAS */
+.routes{
+  margin: 20px;
+}
+.link-page>a{
+  text-decoration-color: #ff42c6;
+  font-size: 14px;
+  color: black;
+}
+.link-page>a>i{
+  color: #ff42c6;
+  font-size: 10px;
+  padding: 2px;
+}
