Añade mejoras en el estilo de los productos

--- a/src/components/Containers/Card/Card.css
+++ b/src/components/Containers/Card/Card.css
@@ -1,6 +1,10 @@
 .card-img-top{
-    width: 80% !important;
+    width: 100% !important;
 }
 .card-body{
-    width: 80% !important;
+    width: 100% !important;
+}
+.card{
+    width: 18rem !important;
+    margin: 0 auto;
 }
